[package]
name = "cupi"
version = "0.1.1"
license = "MIT"
authors = ["inre <inre.storm@gmail.com>"]
description   = "Cuprum Pi is a GPIO access library written on Rust for the Raspberry Pi board."
homepage      = "https://github.com/cuprumpi/cupi"
repository    = "https://github.com/cuprumpi/cupi"
readme        = "README.md"
keywords      = ["respberry", "pi", "gpio", "sys"]
exclude       = [
  ".gitignore",
  ".travis.yml",
  "example.sh",
  "examples/*",
]

[dependencies]
mmap = "*"
libc = "*"
nix    = "0.6.0"
bitflags = "0.3"
#spidev = "*"
#mio = { git = "https://github.com/cuprumpi/mio.git" }
mio = { git = "https://github.com/carllerche/mio.git" }
