[package]
name = "cupi"
version = "0.1.2"
license = "MIT"
authors = ["inre <inre.storm@gmail.com>"]
description   = "Cuprum Pi is a GPIO access library written on Rust for the Raspberry Pi board."
homepage      = "https://github.com/inre/cupi"
repository    = "https://github.com/inre/cupi"
readme        = "README.md"
keywords      = ["respberry", "pi", "gpio", "sys"]
exclude       = [
  ".gitignore",
  ".travis.yml",
  "example.sh",
  "examples/*",
]

[dependencies]
mmap = "^0.1"
libc = "^0.2"
nix  = "^0.6"
bitflags = "*"
mio = { git = "https://github.com/carllerche/mio.git" }
